portfolio.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.font-open-sans- {
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
}
.logo h2{
    font-size: 45px;
    font-weight: 900;
}   
    .btn{
        background-color: #FF7A00;
        border: none;
        padding: 18px 35px; 
        border-radius: 5px;
        font-size: 20px;
        font-weight: bold;
        color: white;
        cursor: pointer;
    } 

  .color-orange {
    color: #FF7A00;
  }

header{
  background-color: #FFF8F3;
  padding-top: 50px;
 }
 nav{
    width:71%;
    max-width: 1140px;
    margin: 0px  auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
 }
 nav .ul{
    display: flex;
    list-style: none;
    gap: 51px;
    align-items: center;
 }
 nav .menu{
    display: flex;
    font-size:20px;
    list-style: none;
    color: #474747;
    gap: 51px;
    align-items: center;
 }
 nav .menu li a{
    font-weight: 20px;
    color: #474747;
    text-decoration: none;
 }
 #banner{
  border: 1px solid #FF7A00;
  margin: 47px 38px 0px 230px;
  display: flex;
  justify-content: space-between;
  align-items: center;
 }
 #banner.banner-content{
  max-width: 585px;
  margin-bottom: 30px ;
}
 #banner .banner-content h2{
  font-size: 45px;
  margin-bottom: 5px;
  font-weight: 600;
  color: #474747;
 }
 #banner .banner-content h1{
  font-size: 80px;
  font-weight: bold;
  color: #181818;
  margin-bottom: 20px;
 }
 #banner .banner-content p{
  font-size: 18px;
  color: #757575;
  line-height: 30px;
  margin-bottom: 30px;
 }

